[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 18
theme_override_constants/margin_top = 18
theme_override_constants/margin_right = 18
theme_override_constants/margin_bottom = 18

[node name="VBox" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBox"]
layout_mode = 2
text = "Huge Buildup - Main Menu"

[node name="NameLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBox"]
layout_mode = 2
text = "Display Name"

[node name="NameEdit" type="LineEdit" parent="CenterContainer/PanelContainer/MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Player"

[node name="HostLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBox"]
layout_mode = 2
text = "Host (for Join)"

[node name="HostEdit" type="LineEdit" parent="CenterContainer/PanelContainer/MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "127.0.0.1"

[node name="PortLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBox"]
layout_mode = 2
text = "Port"

[node name="PortEdit" type="LineEdit" parent="CenterContainer/PanelContainer/MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "24567"

[node name="MaxPlayersLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBox"]
layout_mode = 2
text = "Max Players (Host)"

[node name="MaxPlayersEdit" type="LineEdit" parent="CenterContainer/PanelContainer/MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "16"

[node name="HostButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Host"

[node name="JoinButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Join"

[node name="QuitButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"

[node name="StatusLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Ready."
